# OOP-Y1S2

./: CMakeLists.txt
FPOINTER/: CMakeLists.txt  main.cpp
LAB1/: CMakeLists.txt  main.c
LAB14/: CMakeLists.txt
LAB14/Controller/: MovieController.cpp  MovieController.h
LAB14/Files/: csv-watch-list.txt  shows.txt
LAB14/List/: STLVector.h
LAB14/Model/: WatchListItem.cpp
LAB14/Repository/: IMovieRepository.cpp  IWatchListRepository.cpp  IWatchListRepository.h  MemoryMovieRepository.cpp  MemoryWatchListRepository.h  MovieRepository.cpp
LAB14/Tests/: Tests.cpp  Tests.h
LAB14/UI/: MainWindow.cpp  MainWindow.h  UI.h  Ui_MainWindow.cpp  Ui_MainWindow.h  Ui_WatchListCustomModel.cpp  Ui_WatchListCustomModel.h
LAB14/Undo/: Undo.cpp  Undo.h  UndoAdd.cpp  UndoAdd.h  UndoErase.cpp  UndoErase.h  UndoUpdate.cpp  UndoUpdate.h
LAB14/UndoRedo/: UndoRedo.h  UndoRedoAdd.h  UndoRedoErase.cpp  UndoRedoErase.h  UndoRedoUpdate.h
LAB3-4/: CMakeLists.txt  DynamicArray.c  DynamicArray.h  MedController.c  MedController.h  MedDomain.c  MedDomain.h  MedRepository.c  MedRepository.h  MedUI.c  MedUI.h  Operation.c  Operation.h  main.c  tests.c  tests.h
LAB5-11/: Diagram.mdj
LAB5-11/Controller/: MovieController.h
LAB5-11/Files/: html-watch-list.html  shows.txt
LAB5-11/List/: DynamicArray.cpp
LAB5-11/Model/: Movie.cpp  Movie.h  WatchListItem.h
LAB5-11/Others/: Exception.cpp  Iterator.cpp
LAB5-11/Repository/: CSVWatchListRepository.cpp  IMovieRepository.cpp  MemoryMovieRepository.h
LAB5-12/: CMakeLists.txt  main.cpp
LAB5-12/Controller/: MovieController.cpp
LAB5-12/Files/: csv-watch-list.txt  shows.txt  watch-list.txt
LAB5-12/List/: IDynamicArray.h  STLVector.cpp
LAB5-12/UI/: GUI.cpp  GUI.h  MainWindow.cpp  MainWindow.h  Ui_MainWindow.h
LAB5-14/: CMakeLists.txt  Diagram.mdj  main.cpp
LAB5-14/Controller/: MovieController.h
LAB5-14/Files/: shows.txt  watch-list.txt
LAB5-14/Repository/: CSVWatchListRepository.h  FileMovieRepository.cpp  FileMovieRepository.h  IMovieRepository.h  MovieRepository.h
LAB5-14/UI/: MainWindow.cpp  Ui_MainWindow.h  Ui_WatchListCustomModel.cpp  Ui_WatchListCustomModel.h
LAB5-14/UndoRedo/: UndoRedo.cpp  UndoRedoAdd.cpp  UndoRedoUpdate.cpp
LAB5-14/x/: index.html
LAB5-6/: CMakeLists.txt  DynamicArray.cpp  DynamicArray.h  IDynamicArray.h  Iterator.cpp  Iterator.h  Movie.cpp  Movie.h  MovieController.cpp  MovieController.h  MovieRepository.cpp  MovieRepository.h  STLVector.cpp  STLVector.h  Tests.cpp  Tests.h  UI.cpp  UI.h  WatchListRepository.cpp  WatchListRepository.h  main.cpp
LAB5-6/Controller/: MovieController.cpp  MovieController.h
LAB5-6/CoverageReport-2017-04-29-12h06m45s/Modules/Lab5-9TestsV3/: dynamicarray.h.html  exception.cpp.html  memorywatchlistrepository.cpp.html  movierepository.cpp.html
LAB5-6/Files/: csv-watch-list.txt  html-watch-list.html  shows.txt  watch-list.txt
LAB5-6/List/: DynamicArray.h  IDynamicArray.cpp
LAB5-6/Model/: Movie.h  WatchListItem.cpp  WatchListItem.h
LAB5-6/Others/: Exception.h
LAB5-6/Repository/: CSVWatchListRepository.cpp  CSVWatchListRepository.h  FileMovieRepository.cpp  HTMLWatchListRepository.cpp  HTMLWatchListRepository.h  IWatchListRepository.cpp  IWatchListRepository.h  MemoryWatchListRepository.cpp  MovieRepository.cpp  WatchListRepository.cpp  WatchListRepository.h
LAB5-6/Tests/: Tests.cpp  Tests.h
LAB5-6/UI/: GUI.cpp  GUI.h  UI.cpp  UI.h
LAB5-6/x/Modules/: Lab5-9TestsV3.html
LAB5-6/x/Modules/Lab5-9TestsV3/: imovierepository.cpp.html
Lecture3/: CMakeLists.txt  main.cpp
RecapForPractical1/: CMakeLists.txt  DynamicArray.cpp  DynamicArray.h  main.cpp
RepeatForExam/01Observer/: CMakeLists.txt  main.cpp
RepeatForExam/01Observer/Observer/: IObserver.cpp  IObserver.h  ProductObserver.cpp  ProductObserver.h
RepeatForExam/01Observer/Subject/: ActionSubject.cpp  ActionSubject.h  ISubject.cpp  ISubject.h
RepeatForExam/02Adapter/: CMakeLists.txt  main.cpp
RepeatForExam/02Adapter/New/: INewRectangle.h  (+1 more)
RepeatForExam/03Composite/: CMakeLists.txt  IGraphic.cpp  IGraphic.h  Line.cpp  Line.h  Picture.cpp  Picture.h  Rectangle.cpp  Rectangle.h  main.cpp
RepeatForExam/04Strategy/: CMakeLists.txt  ISave.cpp  ISave.h  SaveConsole.cpp  SaveConsole.h  SaveFile.cpp  SaveFile.h  main.cpp
RepeatForExam/OfficialSimulation/: CMakeLists.txt  main.cpp
RepeatForExam/OfficialSimulation/Controller/: GradingController.cpp  GradingController.h
RepeatForExam/OfficialSimulation/Exception/: Exception.cpp  Exception.h
RepeatForExam/OfficialSimulation/Model/: Student.cpp  Student.h  Teacher.cpp  Teacher.h
RepeatForExam/OfficialSimulation/Repository/: StudentsRepository.cpp  StudentsRepository.h  TeachersRepository.cpp  TeachersRepository.h
RepeatForExam/OfficialSimulation/UI/: customProxyTableModel.cpp  customProxyTableModel.h  mainwindow.cpp  mainwindow.h  tablemodel.cpp  tablemodel.h  ui_mainwindow.cpp  ui_mainwindow.h
RepeatForExam/Simulation/: CMakeLists.txt  main.cpp
RepeatForExam/Simulation/Model/: Weather.cpp  Weather.h
RepeatForExam/Simulation/Repository/: Repository.cpp  Repository.h
RepeatForExam/Simulation/UI/: CustomProxyModel.cpp  CustomProxyModel.h  UI_ListModel.cpp  UI_ListModel.h  UI_TableModel.cpp  UI_TableModel.h  mainwindow.cpp  mainwindow.h  ui_list.cpp  ui_list.h  ui_mainwindow.h
Seminar1/: CMakeLists.txt  bla.cpp  library.c  library.h
Test1/: ProjectController.h  ProjectModel.h  ProjectRepository.cpp  UI.cpp  UI.h
Test10APR/: CMakeLists.txt  ProjectController.cpp  ProjectModel.cpp  ProjectRepository.h  Tests.cpp  Tests.h  main.cpp
Test2/: BMI.cpp  BMI.h  BP.cpp  BP.h  CMakeLists.txt  Date.cpp  Date.h  Exception.cpp  Exception.h  MedicalAnalysis.cpp  MedicalAnalysis.h  Person.cpp  Person.h  UI.cpp  UI.h  main.cpp
Test3/: CMakeLists.txt  file.txt  main.cpp
Test3/CONTROLLER/: Controller.cpp  Controller.h
Test3/MODEL/: Bill.cpp  Bill.h
Test3/Repository/: Repository.cpp  Repository.h
Test3/UI/: listmodel.cpp  listmodel.h  mainwindow.cpp  mainwindow.h  ui_mainwindow.h
TestPolymorphism/: CMakeLists.txt  main.cpp
untitled/: main  main.c
(+28 files in other folders)
